Implement internationalization (i18n) support across multiple HTML files, adding data attributes for translations in Spanish and English. Update content in 'about.html', 'Chile.html', 'contact.html', 'import.html', 'index.html', 'infrastructure.html', and 'lang.js' to enhance accessibility and user experience.

--- a/Chile.html
+++ b/Chile.html
@@ -39,7 +39,7 @@
         <!-- Hero Banner -->
         <section class="chile-hero">
             <div class="hero-overlay">
-                <h1><span class="highlight-red">Chile</span> Presencia</h1>
+                <h1><span class="highlight-red">Chile</span> <span data-i18n="chile.hero.h1">Presencia</span></h1>
             </div>
         </section>
 
@@ -47,8 +47,8 @@
         <section class="headquarters-section">
             <div class="section-container">
                 <div class="headquarters-content">
-                    <h2>Sede</h2>
-                    <h3>Chile</h3>
+                    <h2 data-i18n="chile.hq.h2">Sede</h2>
+                    <h3 data-i18n="contact.locations.country">Chile</h3>
                     <img src="chileflag.jpeg" alt="Chile Flag" class="flag-image">
                 </div>
             </div>
@@ -56,7 +56,7 @@
 
         <!-- Map and Partners Section -->
         <div class="map-container">
-    <h2>Nuestra ubicación</h2>
+    <h2 data-i18n="chile.map.h2">Nuestra ubicación</h2>
    <iframe
   src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13293408.594429525!2d-75!3d-30!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1716160000000!5m2!1sen!2sus"
   width="600"
@@ -69,7 +69,7 @@
 </div> 
               
 <div class="partners-container">
-    <h2>Nuestros socios</h2>
+    <h2 data-i18n="chile.partners.h2">Nuestros socios</h2>
     <div class="partners-marquee">
         <div class="partners-track">
             <div class="partner-item"><img src="cenabast-1.jpg" alt="Cenabast"></div>
@@ -102,7 +102,7 @@
 
     <button class="scroll-to-top" id="scrollToTop">
         <div class="progress-circle"></div>
-        <span class="tooltip">Volver al principio</span>
+        <span class="tooltip" data-i18n="common.scroll_top">Volver al principio</span>
     </button>
 
     <footer class="footer">
@@ -110,7 +110,7 @@
             <div class="footer-main">
                 <div class="footer-brand">
                     <img src="logo2.png" alt="Divine Healthcare Logo" class="footer-logo">
-                    <p class="footer-description">
+                    <p class="footer-description" data-i18n="footer.description">
                         Nuestra Visión es que nuestros productos posean certificación emitida por 
                      las más altas agencias reguladoras manteniendo precios asequibles para las 
                      instituciones y pacientes con más de 2 décadas de experiencia en el campo.
@@ -132,16 +132,16 @@
 
                 <div class="footer-links">
                     <div class="links-column">
-                        <h3>Enlaces rápidos</h3>
+                        <h3 data-i18n="footer.quick_links">Enlaces rápidos</h3>
                         <ul>
-                           <li><a href="#">Importación uso Personal</a></li>
-                            <li><a href="index.html">Hogar</a></li>
-                            <li><a href="about.html">Sobre nosotros</a></li>
-                            <li><a href="#">Verticales de negocios</a></li>
-                            <li><a href="#">Nuestro portafolio</a></li>
-                            <li><a href="infrastructure.html">Infraestructura</a></li>
-                            <li><a href="Chile.html">Presencia en Chile</a></li>
-                            <li><a href="contact.html">Contáctenos</a></li>
+                           <li><a href="import.html" data-i18n="footer.link.import_personal">Importación uso Personal</a></li>
+                            <li><a href="index.html" data-i18n="footer.link.home">Hogar</a></li>
+                            <li><a href="about.html" data-i18n="footer.link.about">Sobre nosotros</a></li>
+                            <li><a href="#" data-i18n="footer.link.business">Verticales de negocios</a></li>
+                            <li><a href="#" data-i18n="footer.link.portfolio">Nuestro portafolio</a></li>
+                            <li><a href="infrastructure.html" data-i18n="footer.link.infrastructure">Infraestructura</a></li>
+                            <li><a href="Chile.html" data-i18n="footer.link.chile">Presencia en Chile</a></li>
+                            <li><a href="contact.html" data-i18n="footer.link.contact">Contáctenos</a></li>
                         </ul>
                     </div>
                     <div class="links-column">
@@ -257,7 +257,7 @@ const scrollToTopBtn = document.getElementById('scrollToTop');
 </script>
             </div>
             <div class="footer-bottom">
-                <p class="copyright">&copy; 2025 Divine Healthcare. Todos los derechos reservados.</p>
+                <p class="copyright" data-i18n="footer.copyright">&copy; 2025 Divine Healthcare. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
