--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="social-bar">
             <div class="container">
                <div class="social-links">
-    <span>Follow Us:</span>
+    <span data-i18n="common.follow_us">Follow Us:</span>
     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
     <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
     <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
@@ -74,7 +74,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Divine Health<span class="highlight-blue">Care</span></h1>
-                <p class="tagline">Impulsados por la innovación, guiados por el cuidado</p>
+                <p class="tagline" data-i18n="home.tagline">Impulsados por la innovación, guiados por el cuidado</p>
             </div>
         </section>
 
@@ -85,19 +85,19 @@
                     <video autoplay loop muted playsinline>
                         <source src="infra.mp4" type="video/mp4">
                         <!-- Add additional source formats if needed -->
-                        Su navegador no soporta la etiqueta de video.
+                        <span data-i18n="home.video.fallback">Su navegador no soporta la etiqueta de video.</span>
                     </video>
                 </div>
                 <div class="video-content">
-                    <h2>Nuestro compromiso con la excelencia en la atención médica</h2>
-                    <p>Divine Healthcare, nos dedicamos a brindar soluciones médicas innovadoras que mejoran los resultados de los pacientes en todo el mundo. Nuestras dos décadas de experiencia en el mercado chileno nos han permitido desarrollar un profundo conocimiento de las necesidades de atención médica en diferentes regiones.</p>
-                    <p>Combinamos tecnología de vanguardia con atención compasiva para ofrecer productos que cumplan con los más altos estándares regulatorios y sigan siendo accesibles para todos.</p>
-                    <a href="about.html" class="video-btn">Conozca más sobre nosotros</a>
+                    <h2 data-i18n="home.video.h2">Nuestro compromiso con la excelencia en la atención médica</h2>
+                    <p data-i18n="home.video.p1">Divine Healthcare, nos dedicamos a brindar soluciones médicas innovadoras que mejoran los resultados de los pacientes en todo el mundo. Nuestras dos décadas de experiencia en el mercado chileno nos han permitido desarrollar un profundo conocimiento de las necesidades de atención médica en diferentes regiones.</p>
+                    <p data-i18n="home.video.p2">Combinamos tecnología de vanguardia con atención compasiva para ofrecer productos que cumplan con los más altos estándares regulatorios y sigan siendo accesibles para todos.</p>
+                    <a href="about.html" class="video-btn" data-i18n="home.video.cta">Conozca más sobre nosotros</a>
                 </div>
             </div>
         </section>
 
-        <div class="para">
+        <div class="para" data-i18n="home.long_para">
             <b>Divine Health</b><span class="highlight-blue"><b>Care</b></span> es una empresa líder en el sector salud con sede en Chile, dedicada a obtener productos de empresas manufactureras líderes en investigación que ofrecen medicamentos de alta calidad. Brindamos a profesionales de la salud y pacientes medicamentos innovadores que salvan vidas. Nuestras dos décadas de experiencia en el mercado chileno nos han permitido comprender a fondo las necesidades de salud en diferentes regiones. Nuestros estrictos estándares de calidad y prácticas sostenibles, conforme a las directrices chilenas, garantizan la confianza en cada producto que creamos.
         </div>
 
@@ -105,8 +105,8 @@
     <section class="parallax">
   <div class="parallax-overlay">
     <div class="parallax-content">
-      <h3>Profesionales con amplia experiencia en el sector Salud aseguran la gestión de su necesidad.</h3>
-      <button onclick="window.location.href='import.html'" class="med-import-btn">Nos encargamos de la importación de medicamentos que no están disponibles en Chile, así como de fármacos de alto costo que nos ayudan a acercar a los pacientes a recuperar su salud.</button>
+      <h3 data-i18n="home.parallax.h3">Profesionales con amplia experiencia en el sector Salud aseguran la gestión de su necesidad.</h3>
+      <button onclick="window.location.href='import.html'" class="med-import-btn" data-i18n="home.parallax.btn">Nos encargamos de la importación de medicamentos que no están disponibles en Chile, así como de fármacos de alto costo que nos ayudan a acercar a los pacientes a recuperar su salud.</button>
     </div>
   </div>
 </section>
@@ -115,7 +115,7 @@
 
     <button class="scroll-to-top" id="scrollToTop">
         <div class="progress-circle"></div>
-        <span class="tooltip">Volver al principio</span>
+        <span class="tooltip" data-i18n="common.scroll_top">Volver al principio</span>
     </button>
 
     <footer class="footer">
@@ -123,7 +123,7 @@
             <div class="footer-main">
                 <div class="footer-brand">
                     <img src="logo2.png" alt="Divine Healthcare Logo" class="footer-logo">
-                    <p class="footer-description">
+                    <p class="footer-description" data-i18n="footer.description">
                         Nuestra Visión es que nuestros productos posean certificación emitida 
                         por las más altas agencias reguladoras manteniendo precios asequibles 
                         para las instituciones y pacientes con más de 2 décadas de experiencia en el campo.
@@ -145,20 +145,20 @@
 
                 <div class="footer-links">
                     <div class="links-column">
-                        <h3>Enlaces rápidos</h3>
+                        <h3 data-i18n="footer.quick_links">Enlaces rápidos</h3>
                         <ul>
-                            <li><a href="import.html">Importación uso Personal</a></li>
-                            <li><a href="index.html">Hogar</a></li>
-                            <li><a href="about.html">Sobre nosotros</a></li>
-                            <li><a href="#">Verticales de negocios</a></li>
-                            <li><a href="#">Nuestro portafolio</a></li>
-                            <li><a href="infrastructure.html">Infraestructura</a></li>
-                            <li><a href="Chile.html">Presencia en Chile</a></li>
-                            <li><a href="contact.html">Contáctenos</a></li>
+                            <li><a href="import.html" data-i18n="footer.link.import_personal">Importación uso Personal</a></li>
+                            <li><a href="index.html" data-i18n="footer.link.home">Hogar</a></li>
+                            <li><a href="about.html" data-i18n="footer.link.about">Sobre nosotros</a></li>
+                            <li><a href="#" data-i18n="footer.link.business">Verticales de negocios</a></li>
+                            <li><a href="#" data-i18n="footer.link.portfolio">Nuestro portafolio</a></li>
+                            <li><a href="infrastructure.html" data-i18n="footer.link.infrastructure">Infraestructura</a></li>
+                            <li><a href="Chile.html" data-i18n="footer.link.chile">Presencia en Chile</a></li>
+                            <li><a href="contact.html" data-i18n="footer.link.contact">Contáctenos</a></li>
                         </ul>
                     </div>
                     <div class="links-column">
-                        <h3>Idiomas</h3>
+                        <h3 data-i18n="footer.languages">Idiomas</h3>
                         <ul>
                             <li><a href="#" class="language-option" data-lang="en" data-i18n="lang.english">Inglés</a></li>
                             <li><a href="#" class="language-option" data-lang="es" data-i18n="lang.spanish">Español</a></li>
@@ -168,23 +168,21 @@
 
                 <form class="contact-form" action="https://formsubmit.co/contacto@divine.cl" method="POST" id="contactForm">
     <!-- Form Inputs -->
-    <input type="text" name="name" placeholder="Nombre" required>
-    <input type="email" name="email" placeholder="Correo electrónico" required>
-    <textarea name="message" placeholder="Tu mensaje" rows="4" required></textarea>
+    <input type="text" name="name" data-i18n="form.name" data-i18n-attr="placeholder" placeholder="Nombre" required>
+    <input type="email" name="email" data-i18n="form.email" data-i18n-attr="placeholder" placeholder="Correo electrónico" required>
+    <textarea name="message" data-i18n="form.message" data-i18n-attr="placeholder" placeholder="Tu mensaje" rows="4" required></textarea>
 
     <!-- Hidden FormSubmit Config -->
     <input type="hidden" name="_captcha" value="false">
     <input type="text" name="_honey" style="display:none">
-    <input type="hidden" name="_autoresponse" value="¡Gracias por contactarnos! Nos comunicaremos con usted pronto.">
+    <input type="hidden" name="_autoresponse" data-i18n="form.autoresponse" data-i18n-attr="value" value="¡Gracias por contactarnos! Nos comunicaremos con usted pronto.">
 
     <!-- Success Message -->
-    <div id="form-success" style="display: none;">
-        ¡Gracias! Su mensaje ha sido enviado exitosamente.
-    </div>
+    <div id="form-success" style="display: none;" data-i18n="form.success">¡Gracias! Su mensaje ha sido enviado exitosamente.</div>
 
     <div class="form-actions">
-        <button type="submit" class="submit-btn">Enviar mensaje</button>
-        <button type="reset" class="reset-btn">Reiniciar</button>
+        <button type="submit" class="submit-btn" data-i18n="form.submit">Enviar mensaje</button>
+        <button type="reset" class="reset-btn" data-i18n="form.reset">Reiniciar</button>
     </div>
 </form>
 
@@ -270,8 +268,8 @@ document.getElementById('contactForm').addEventListener('submit', async function
 </script>
 </form>
 </div>
-<div class="footer-bottom">
-                <p class="copyright">&copy; 2025 Divine Healthcare. Todos los derechos reservados.</p>
+            <div class="footer-bottom">
+                <p class="copyright" data-i18n="footer.copyright">&copy; 2025 Divine Healthcare. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
