--- a/contact.html
+++ b/contact.html
@@ -279,9 +279,9 @@
 
     </main>
 
-     <button class="scroll-to-top" id="scrollToTop">
+    <button class="scroll-to-top" id="scrollToTop">
         <div class="progress-circle"></div>
-        <span class="tooltip">Volver al principio</span>
+        <span class="tooltip" data-i18n="common.scroll_top">Volver al principio</span>
     </button>
 
         <footer class="footer">
@@ -324,7 +324,7 @@
                         </ul>
                     </div>
                     <div class="links-column">
-                        <h3>Idiomas</h3>
+                        <h3 data-i18n="footer.languages">Idiomas</h3>
                         <ul>
                             <li><a href="#" class="language-option" data-lang="es" data-i18n="lang.spanish">Español</a></li>
                             <li><a href="#" class="language-option" data-lang="en" data-i18n="lang.english">Inglés</a></li>
