--- a/import.html
+++ b/import.html
@@ -1381,9 +1381,9 @@ document.addEventListener('DOMContentLoaded', function() {
         
     </div>
 
-     <button class="scroll-to-top" id="scrollToTop">
+    <button class="scroll-to-top" id="scrollToTop">
         <div class="progress-circle"></div>
-        <span class="tooltip">Volver al principio</span>
+        <span class="tooltip" data-i18n="common.scroll_top">Volver al principio</span>
     </button>
     
 
@@ -1427,24 +1427,24 @@ document.addEventListener('DOMContentLoaded', function() {
                         </ul>
                     </div>
                     <div class="links-column">
-                        <h3>Idiomas</h3>
+                        <h3 data-i18n="footer.languages">Idiomas</h3>
                         <ul>
-                            <li><a href="#">Español</a></li>
-                            <li><a href="#">Inglés</a></li>
+                            <li><a href="#" class="language-option" data-lang="es" data-i18n="lang.spanish">Español</a></li>
+                            <li><a href="#" class="language-option" data-lang="en" data-i18n="lang.english">Inglés</a></li>
                         </ul>
                     </div>
                 </div>
 
               <form class="contact-form" action="https://formsubmit.co/contacto@divine.cl" method="POST" id="contactForm">
     <!-- Form Inputs -->
-    <input type="text" name="name" placeholder="Nombre" required>
-    <input type="email" name="email" placeholder="Correo electrónico" required>
-    <textarea name="message" placeholder="Tu mensaje" rows="4" required></textarea>
+    <input type="text" name="name" placeholder="Nombre" required data-i18n="form.name" data-i18n-attr="placeholder">
+    <input type="email" name="email" placeholder="Correo electrónico" required data-i18n="form.email" data-i18n-attr="placeholder">
+    <textarea name="message" placeholder="Tu mensaje" rows="4" required data-i18n="form.message" data-i18n-attr="placeholder"></textarea>
 
     <!-- Hidden FormSubmit Config -->
     <input type="hidden" name="_captcha" value="false">
     <input type="text" name="_honey" style="display:none">
-    <input type="hidden" name="_autoresponse" value="Thank you for contacting us! We'll get back to you soon.">
+    <input type="hidden" name="_autoresponse" value="Thank you for contacting us! We'll get back to you soon." data-i18n="form.autoresponse" data-i18n-attr="value">
 
     <!-- Success Message -->
     <div id="form-success" style="display: none;">
@@ -1452,8 +1452,8 @@ document.addEventListener('DOMContentLoaded', function() {
     </div>
 
     <div class="form-actions">
-        <button type="submit" class="submit-btn">Enviar mensaje</button>
-        <button type="reset" class="reset-btn">Reiniciar</button>
+        <button type="submit" class="submit-btn" data-i18n="form.submit">Enviar mensaje</button>
+        <button type="reset" class="reset-btn" data-i18n="form.reset">Reiniciar</button>
     </div>
 </form>
 
