--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
         </section>
 
-        <div class="para" data-i18n="home.long_para">
+        <div class="para" data-i18n="home.long_para" data-i18n-html>
             <b>Divine Health</b><span class="highlight-blue"><b>Care</b></span> es una empresa líder en el sector salud con sede en Chile, dedicada a obtener productos de empresas manufactureras líderes en investigación que ofrecen medicamentos de alta calidad. Brindamos a profesionales de la salud y pacientes medicamentos innovadores que salvan vidas. Nuestras dos décadas de experiencia en el mercado chileno nos han permitido comprender a fondo las necesidades de salud en diferentes regiones. Nuestros estrictos estándares de calidad y prácticas sostenibles, conforme a las directrices chilenas, garantizan la confianza en cada producto que creamos.
         </div>
 
