update translation footer input placeholder

--- a/contact.html
+++ b/contact.html
@@ -334,9 +334,9 @@
 
                <form class="contact-form" action="https://formsubmit.co/contacto@divine.cl" method="POST" id="contactForm">
     <!-- Form Inputs -->
-    <input type="text" name="name" placeholder="Nombre" required>
-    <input type="email" name="email" placeholder="Correo electrónico" required>
-    <textarea name="message" placeholder="Tu mensaje" rows="4" required></textarea>
+    <input type="text" name="name" data-i18n="form.name" data-i18n-attr="placeholder" placeholder="Nombre" required>
+    <input type="email" name="email" data-i18n="form.email" data-i18n-attr="placeholder" placeholder="Correo electrónico" required>
+    <textarea name="message" data-i18n="form.message" data-i18n-attr="placeholder" placeholder="Tu mensaje" rows="4" required></textarea>
 
     <!-- Hidden FormSubmit Config -->
     <input type="hidden" name="_captcha" value="false">
