Add internationalization support for "Who we are" section in import.html and lang.js

--- a/import.html
+++ b/import.html
@@ -413,8 +413,8 @@ Message: ${formData.message || 'N/A'}`;
     <img src="strip3.png" alt="Company Logo" class="quote-logo center"> -->
    
     <div class="quote-content">
-        <h2>Quienes somos</h2>
-        <button class="btn" id="scrollToWhoWeAre">Inicio > quienes somos</button>
+        <h2 data-i18n="quote.content.title1">Quienes somos</h2>
+        <button class="btn" id="scrollToWhoWeAre" data-i18n="quote.content.button.1">Inicio > quienes somos</button>
     </div>
 </section>
 
@@ -431,7 +431,7 @@ Message: ${formData.message || 'N/A'}`;
     ====================== -->
   <section class="features-section" id="who-we-are">
   <div class="features-header">
-    <p>
+    <p data-i18n="feature.section.who1">
         Divine es una empresa con sede en Chile que se centra en ayudar a los pacientes 
         a acceder a tratamientos inaccesibles o de costo prohibitivo a nivel local. 
         Con más de 25 años de experiencia, nuestra misión es conectar a las personas 
