--- a/import.html
+++ b/import.html
@@ -1470,7 +1470,7 @@ const scrollToTopBtn = document.getElementById('scrollToTop');
                 const scrollHeight = document.documentElement.scrollHeight - window.innerHeight;
                 const scrollPosition = window.pageYOffset;
                 const scrollPercentage = (scrollPosition / scrollHeight) * 360;
-                scrollToTopBtn.querySelector('.progress-circle').style.transform = rotate($,{scrollPercentage},deg);
+                scrollToTopBtn.querySelector('.progress-circle').style.transform = 'rotate(' + scrollPercentage + 'deg)';
             } else {
                 scrollToTopBtn.classList.remove('show');
             }
